<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calculator_bg"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_m"
    android:paddingEnd="@dimen/space_m"
    android:paddingBottom="@dimen/space_l"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:id="@+id/calcDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:maxLines="2"
        android:paddingTop="@dimen/space_xxl"
        android:paddingBottom="@dimen/space_l"
        android:text="@string/calculator_zero"
        android:textColor="@color/calculator_text"
        android:textSize="48sp"
        tools:text="123" />

    <LinearLayout style="@style/CalculatorRow">
        <TextView android:id="@+id/calcClear" style="@style/CalculatorKey.Accent" android:text="@string/calculator_clear" />
        <TextView android:id="@+id/calcBackspace" style="@style/CalculatorKey.Accent" android:text="@string/calculator_backspace" />
        <TextView android:id="@+id/calcPercent" style="@style/CalculatorKey.Accent" android:text="@string/calculator_percent" />
        <TextView android:id="@+id/calcDiv" style="@style/CalculatorKey.Accent" android:text="@string/calculator_divide" />
    </LinearLayout>

    <LinearLayout style="@style/CalculatorRow">
        <TextView android:id="@+id/calc7" style="@style/CalculatorKey" android:text="@string/key_7" />
        <TextView android:id="@+id/calc8" style="@style/CalculatorKey" android:text="@string/key_8" />
        <TextView android:id="@+id/calc9" style="@style/CalculatorKey" android:text="@string/key_9" />
        <TextView android:id="@+id/calcMul" style="@style/CalculatorKey.Accent" android:text="@string/calculator_multiply" />
    </LinearLayout>

    <LinearLayout style="@style/CalculatorRow">
        <TextView android:id="@+id/calc4" style="@style/CalculatorKey" android:text="@string/key_4" />
        <TextView android:id="@+id/calc5" style="@style/CalculatorKey" android:text="@string/key_5" />
        <TextView android:id="@+id/calc6" style="@style/CalculatorKey" android:text="@string/key_6" />
        <TextView android:id="@+id/calcMinus" style="@style/CalculatorKey.Accent" android:text="@string/calculator_minus" />
    </LinearLayout>

    <LinearLayout style="@style/CalculatorRow">
        <TextView android:id="@+id/calc1" style="@style/CalculatorKey" android:text="@string/key_1" />
        <TextView android:id="@+id/calc2" style="@style/CalculatorKey" android:text="@string/key_2" />
        <TextView android:id="@+id/calc3" style="@style/CalculatorKey" android:text="@string/key_3" />
        <TextView android:id="@+id/calcPlus" style="@style/CalculatorKey.Accent" android:text="@string/calculator_plus" />
    </LinearLayout>

    <LinearLayout style="@style/CalculatorRow">
        <TextView android:id="@+id/calc0" style="@style/CalculatorKey" android:text="@string/key_0" />
        <TextView android:id="@+id/calcDot" style="@style/CalculatorKey" android:text="@string/calculator_dot" />
        <TextView android:id="@+id/calcEquals" style="@style/CalculatorKey.Equals" android:text="@string/calculator_equals" />
    </LinearLayout>
</LinearLayout>
