<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/ic_album"
        android:title="@string/action_move"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore"
        android:title="@string/action_restore"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_forever"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_permanent_delete"
        app:showAsAction="ifRoom" />
</menu>
