<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_to_album"
        android:icon="@drawable/ic_add"
        android:title="@string/vault_add_photo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_empty_bin"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_empty_bin"
        app:showAsAction="ifRoom" />
</menu>
