<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_padding"
        android:paddingTop="@dimen/space_m"
        android:paddingEnd="@dimen/screen_padding"
        android:paddingBottom="@dimen/space_l">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.App.Title"
            tools:text="Instagram" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/perapp_subtitle"
            android:textAppearance="@style/TextAppearance.App.Body" />

        <LinearLayout android:id="@+id/rowUseCustom" style="@style/SettingsRow">
            <LinearLayout style="@style/SettingsRowText" android:layout_marginStart="0dp">
                <TextView style="@style/SettingsRowTitle" android:text="@string/perapp_use_custom" />
                <TextView style="@style/SettingsRowDesc" android:text="@string/perapp_use_custom_desc" />
            </LinearLayout>
            <com.google.android.material.materialswitch.MaterialSwitch android:id="@+id/switchUseCustom"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:clickable="false" android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/rowUnlockMethod" style="@style/SettingsRow">
                <LinearLayout style="@style/SettingsRowText" android:layout_marginStart="0dp">
                    <TextView style="@style/SettingsRowTitle" android:text="@string/perapp_unlock_method" />
                </LinearLayout>
                <TextView android:id="@+id/tvUnlockMethod" style="@style/SettingsRowValue" tools:text="Default" />
                <ImageView style="@style/SettingsRowTrailingIcon" android:src="@drawable/ic_chevron_right" />
            </LinearLayout>

            <LinearLayout android:id="@+id/rowDelay" style="@style/SettingsRow">
                <LinearLayout style="@style/SettingsRowText" android:layout_marginStart="0dp">
                    <TextView style="@style/SettingsRowTitle" android:text="@string/perapp_lock_delay" />
                </LinearLayout>
                <TextView android:id="@+id/tvDelay" style="@style/SettingsRowValue" tools:text="Use global" />
                <ImageView style="@style/SettingsRowTrailingIcon" android:src="@drawable/ic_chevron_right" />
            </LinearLayout>

            <LinearLayout android:id="@+id/rowFakeMode" style="@style/SettingsRow">
                <LinearLayout style="@style/SettingsRowText" android:layout_marginStart="0dp">
                    <TextView style="@style/SettingsRowTitle" android:text="@string/perapp_fake_mode" />
                </LinearLayout>
                <TextView android:id="@+id/tvFakeMode" style="@style/SettingsRowValue" tools:text="Use global" />
                <ImageView style="@style/SettingsRowTrailingIcon" android:src="@drawable/ic_chevron_right" />
            </LinearLayout>

            <LinearLayout android:id="@+id/rowHideName" style="@style/SettingsRow">
                <LinearLayout style="@style/SettingsRowText" android:layout_marginStart="0dp">
                    <TextView style="@style/SettingsRowTitle" android:text="@string/applock_setting_hide_name" />
                </LinearLayout>
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@+id/switchHideName"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:clickable="false" android:focusable="false" />
            </LinearLayout>

            <LinearLayout android:id="@+id/rowBiometricOnly" style="@style/SettingsRow">
                <LinearLayout style="@style/SettingsRowText" android:layout_marginStart="0dp">
                    <TextView style="@style/SettingsRowTitle" android:text="@string/perapp_biometric_only" />
                </LinearLayout>
                <com.google.android.material.materialswitch.MaterialSwitch android:id="@+id/switchBiometricOnly"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:clickable="false" android:focusable="false" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/Widget.App.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/save" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
